syntax = "proto3";

package janitza.device;

message Device {
    enum DeviceType {
        Unknown = 0;
        UMG507 = 1;
        UMG508 = 2;
        UMG509 = 3;
        UMG510 = 4;
        UMG511 = 5;
        UMG512 = 6;
        UMG604 = 7;
        UMG605 = 8;
        UMG96S = 9;
        UMG96S2 = 10;
        UMG96RM = 11;
        UMG96RME = 12;
        UMG96RMEL = 13;
        UMG96PA = 14;
        PRODATA = 15;
        UMG96PN = 16;
        UMG801 = 17;
        UMG801_BASE = 18;
        UMG801_MG = 19;
        UMG801_MG2 = 20;
        UMG801_MG3 = 21;
        GENERIC = 99;
        VIRTUAL = 100;
        KPI = 101;
        DI = 102;
    }
    DeviceType deviceType = 1;
    string serialNumber = 2;
    string deviceName = 3;
    string firmwareVersion = 4;
    string communication = 5;
    string gridVisID = 6;
    string referenceKey = 7;
}

message Devices {
    repeated Device devices = 1;
}